syntax = "proto3";

// options for Java generated sources
option java_multiple_files = true;
option java_package = "com.demo.spring.grpc.core.schema";
option java_outer_classname = "CoreGrpcApi";

package sms.core;

message PingRequest {
    int64 timestamp = 1;
}

message PingResponse {
    int64 timestamp = 1;
    string message = 2;
}

message CheckDriverId {
    int64 id = 1;
}

message DriverEntity {
    int64 id = 1;
    string name = 2;
    int64 age = 3;
    string numberPhone = 4;
}

service CoreService {
    rpc Ping (PingRequest) returns (PingResponse) {}

    rpc CheckDriver (CheckDriverId) returns (DriverEntity) {}
}